mdapipkg/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Flavour_Counter__c</fullName>
        <label>Flavour Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ice_Cream_Flavours__c</fullName>
        <label>Ice Cream Flavours</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Vanilla</fullName>
                </value>
                <value>
                    <fullName>Strawberry</fullName>
                </value>
                <value>
                    <fullName>Amarena</fullName>
                </value>
                <value>
                    <fullName>Stracciatella</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
</CustomObject>